Finish ability to add shows
